# hmrc.aws-ecs-appmesh-ingress-gateway

./: .gitignore  Dockerfile  Makefile  Pipfile  README.md  batect.yml  goss.yaml  proxy_packer.json
containers/igw/: Dockerfile
containers/igw/files/: api_platform_api_gateway_ingress.conf  app_nginx.conf  nginx.conf  nginx_bootstrap.sh
files/: app_nginx.conf  nginx.conf  nginx_bootstrap.sh
integration_tests/: docker-compose.yaml  pyproject.toml
playground/: README.md  deploy.sh
playground/deploy/: 3-routing.yaml
playground/envoy-test/: envoy.yaml
playground/src/ingress-gateway-app/: default.conf
test/: api_platform_ingress_test.py  integration_test.py  performance_tests.py
test/test-runner/: Dockerfile  pyproject.toml
test_certs/: fake_64.cert  fake_64.key
tests/: docker-compose.integration-testing.yaml  docker-compose.performance-testing.yaml  docker-compose.yaml  integration_test.py  performance_tests.py  pyproject.toml
