[tool.poetry]
name = "aws_ecs_appmesh_ingress_gateway_integration_tests"
version = "0.1.0"
description = "ECS Ingress Gateway Integration Tests"
authors = ["eddgrant <edd.grant@digital.hmrc.gov.uk>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^6.1.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
