[tool.poetry]
name = "aws_ecs_appmesh_ingress_gateway_test_runnner_environment"
version = "0.1.0"
description = "ECS Ingress Gateway Test Runner Environment"
authors = ["eddgrant <edd.grant@digital.hmrc.gov.uk>"]

[[tool.poetry.source]]
name = "mdtp-pypi-mirror"
url = "https://artefacts.tax.service.gov.uk/artifactory/api/pypi/pips/simple"
default = true

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^6.1.1"
locust = "^1.3.1"
flake8 = "^3.8.4"
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
